--- a/vscode-masa-blazor-preview/package.json
+++ b/vscode-masa-blazor-preview/package.json
@@ -18,6 +18,10 @@
       {
         "command": "vscode-masa-blazor-preview.renderDocument",
         "title": "Preview Razor File"
+      },
+      {
+        "command": "vscode-masa-blazor-preview.renderFragment",
+        "title": "Preview Selection Razor"
       }
     ],
     "menus": {
@@ -26,6 +30,13 @@
           "when": "resourceFilename =~ /.razor|.cshtml/",
           "command": "vscode-masa-blazor-preview.renderDocument",
           "group": "preview"
+        }
+      ],
+      "editor/context": [
+        {
+          "when" : " editorHasSelection && resourceFilename =~ /.razor|.cshtml/",
+          "command": "vscode-masa-blazor-preview.renderFragment",
+          "group": "preivew"
         }
       ]
     }
@@ -39,16 +50,19 @@
     "test": "node ./out/test/runTest.js"
   },
   "devDependencies": {
-    "@types/vscode": "^1.74.0",
     "@types/glob": "^8.0.1",
     "@types/mocha": "^10.0.1",
     "@types/node": "16.x",
+    "@types/vscode": "^1.74.0",
     "@typescript-eslint/eslint-plugin": "^5.49.0",
     "@typescript-eslint/parser": "^5.49.0",
+    "@vscode/test-electron": "^2.2.2",
     "eslint": "^8.33.0",
     "glob": "^8.1.0",
     "mocha": "^10.1.0",
-    "typescript": "^4.9.4",
-    "@vscode/test-electron": "^2.2.2"
+    "typescript": "^4.9.4"
+  },
+  "dependencies": {
+    "axios": "^1.3.1"
   }
 }
