--- a/vscode-masa-blazor-preview/package.json
+++ b/vscode-masa-blazor-preview/package.json
@@ -39,16 +39,22 @@
     "test": "node ./out/test/runTest.js"
   },
   "devDependencies": {
-    "@types/vscode": "^1.74.0",
     "@types/glob": "^8.0.1",
     "@types/mocha": "^10.0.1",
     "@types/node": "16.x",
+    "@types/vscode": "^1.74.0",
     "@typescript-eslint/eslint-plugin": "^5.49.0",
     "@typescript-eslint/parser": "^5.49.0",
+    "@vscode/test-electron": "^2.2.2",
     "eslint": "^8.33.0",
     "glob": "^8.1.0",
     "mocha": "^10.1.0",
+    "process": "^0.11.10",
+    "tslib": "^2.5.0",
     "typescript": "^4.9.4",
-    "@vscode/test-electron": "^2.2.2"
+    "util": "^0.12.5"
+  },
+  "dependencies": {
+    "axios": "^1.3.0"
   }
 }
