--- a/vscode-masa-blazor-preview/package.json
+++ b/vscode-masa-blazor-preview/package.json
@@ -47,7 +47,8 @@
     "watch": "tsc -watch -p ./",
     "pretest": "yarn run compile && yarn run lint",
     "lint": "eslint src --ext ts",
-    "test": "node ./out/test/runTest.js"
+    "test": "node ./out/test/runTest.js",
+    "package": "vsce package"
   },
   "devDependencies": {
     "@types/glob": "^8.0.1",
