修改README.md及代码仓库设置

--- a/vscode-masa-blazor-preview/package.json
+++ b/vscode-masa-blazor-preview/package.json
@@ -9,6 +9,9 @@
   "categories": [
     "Other"
   ],
+  "repository": {
+    "url": "https://gitee.com/fffirer/vscode-masa-blazor-preview"
+  },
   "activationEvents": [
     "onCommand:vscode-masa-blazor-preview.renderDocument"
   ],
