--- a/vscode-masa-blazor-preview/package.json
+++ b/vscode-masa-blazor-preview/package.json
@@ -52,7 +52,7 @@
     "pretest": "yarn run compile && yarn run lint",
     "lint": "eslint src --ext ts",
     "test": "node ./out/test/runTest.js",
-    "package": "vsce package"
+    "package": "vsce package --no-yarn"
   },
   "devDependencies": {
     "@types/glob": "^8.0.1",
