--- a/vscode-masa-blazor-preview/.vscodeignore
+++ b/vscode-masa-blazor-preview/.vscodeignore
@@ -10,8 +10,8 @@ vsc-extension-quickstart.md
 **/*.ts
 
 *.vsix
-out/
+# out/
 .vscodeignore
-.eslintrc.json
-node_modules/
-tsconfig.json
+# .eslintrc.json
+# node_modules/
+# tsconfig.json
