--- a/vscode-masa-blazor-preview/package.json
+++ b/vscode-masa-blazor-preview/package.json
@@ -2,7 +2,8 @@
   "name": "vscode-masa-blazor-preview",
   "displayName": "vscode-masa-blazor-preview",
   "description": "preivew masa blazor component",
-  "version": "0.0.2",
+  "version": "0.0.9",
+  "publisher": "fffirer",
   "engines": {
     "vscode": "^1.74.0"
   },
@@ -12,34 +13,31 @@
   "repository": {
     "url": "https://gitee.com/fffirer/vscode-masa-blazor-preview"
   },
-  "activationEvents": [
-    "onCommand:vscode-masa-blazor-preview.renderDocument",
-    "onCommand:vscode-masa-blazor-preview.renderFragment"
-  ],
+  "activationEvents": [],
   "main": "./out/extension.js",
   "contributes": {
     "commands": [
       {
-        "command": "vscode-masa-blazor-preview.renderDocument",
-        "title": "预览Razor文件"
+        "command": "vscode-masa-blazor-preview.previewDocument",
+        "title": "Preview Razor File"
       },
       {
-        "command": "vscode-masa-blazor-preview.renderFragment",
-        "title": "预览Razor片段"
+        "command": "vscode-masa-blazor-preview.previewFragment",
+        "title": "Preview Razor Fragment"
       }
     ],
     "menus": {
       "editor/title/run": [
         {
           "when": "resourceFilename =~ /.razor|.cshtml/",
-          "command": "vscode-masa-blazor-preview.renderDocument",
+          "command": "vscode-masa-blazor-preview.previewDocument",
           "group": "preview"
         }
       ],
       "editor/context": [
         {
-          "when" : " editorHasSelection && resourceFilename =~ /.razor|.cshtml/",
-          "command": "vscode-masa-blazor-preview.renderFragment",
+          "when": " editorHasSelection && resourceFilename =~ /.razor|.cshtml/",
+          "command": "vscode-masa-blazor-preview.previewFragment",
           "group": "preivew"
         }
       ]
@@ -68,6 +66,7 @@
     "typescript": "^4.9.4"
   },
   "dependencies": {
-    "axios": "^1.3.1"
+    "axios": "^1.3.1",
+    "semver": "^7.3.8"
   }
 }
